tests/input/ill-typed/extra-tests/multi-parameter/bad-add-1.stella
language core;

fn add_fn(n : Nat, m : Bool) -> Nat {
    return n + m;
}

fn main(n : Nat) -> Nat {
  return add_fn(n, true);
}
